Project

General

Profile

Actions

Bug #40204

closed

rgw_file: all directories are virtual with respect to contents, and are always invalid

Added by Matt Benjamin almost 5 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Even materialized directories should be regarded as placeholders only for the names, we cannot trust their mtime for entry caching. To avoid namespace timeouts, moreover, we should introduce at least the option to treat directories as always invalid after a short time period.


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #40262: mimic: rgw_file: all directories are virtual with respect to contents, and are always invalidResolvedPrashant DActions
Copied to rgw - Backport #40263: nautilus: rgw_file: all directories are virtual with respect to contents, and are always invalidResolvedPrashant DActions
Copied to rgw - Backport #40264: luminous: rgw_file: all directories are virtual with respect to contents, and are always invalidRejectedActions
Actions #1

Updated by Matt Benjamin almost 5 years ago

  • Assignee set to Matt Benjamin
  • Pull request ID set to 28451
Actions #2

Updated by Matt Benjamin almost 5 years ago

  • Backport set to nautilus, mimic, luminous
Actions #3

Updated by Matt Benjamin almost 5 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Matt Benjamin almost 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40262: mimic: rgw_file: all directories are virtual with respect to contents, and are always invalid added
Actions #6

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40263: nautilus: rgw_file: all directories are virtual with respect to contents, and are always invalid added
Actions #7

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #40264: luminous: rgw_file: all directories are virtual with respect to contents, and are always invalid added
Actions #8

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF